- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    6.4.1
- 
        59d6cf324 (dev), 030f68acb (6.5)
Using a constant from the JS standard api, like so:
Text {
    text: Number.EPSILON
}
works perfectly fine, but there is an incorrect warning and error from the qml linter / compiler:
Warning: main.qml:10:22: Type is a method. You cannot access "EPSILON" from here.
        text: Number.EPSILON
                     ^^^^^^^
Error: main.qml:10:22: Could not compile binding for text: Cannot generate efficient code for lookup in QJSValue
        text: Number.EPSILON
                     ^^^^^^^