tests/auto/qml/qmllint/data/constructorProperty.qml
@@ -1,0 +1,5 @@
+import QtQml
+
+QtObject {
+    property double f: Number.EPSILON
+}
