tests/auto/qml/qmllint/tst_qmllint.cpp
@@ -1198,6 +1198,7 @@ void TestQmllint::cleanQmlCode_data()
     QTest::newRow("qtquickdialog") << QStringLiteral("qtquickdialog.qml");
     QTest::newRow("callBase") << QStringLiteral("callBase.qml");
     QTest::newRow("propertyWithOn") << QStringLiteral("switcher.qml");
+    QTest::newRow("constructorProperty") << QStringLiteral("constructorProperty.qml");
 }
 
 void TestQmllint::cleanQmlCode()
